<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Space
                android:layout_width="35dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/popup_orderText"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/order_title"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/bt_clear_order"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/order_tick_description"
                android:scaleType="fitCenter"
                android:src="@drawable/sort_generic_cross"
                android:tint="#00FFFFFF"
                tools:src="@drawable/sort_generic_cross" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp">

            <TextView
                android:id="@+id/lbOrderType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/order_type"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/typeOrderSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#AAF6DDFF"
                android:paddingHorizontal="5dp"
                android:text="@string/order_type_selection"
                android:textAlignment="center"
                android:layout_marginVertical="5dp"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Ordenar por precio    -->
        <!-- Se cambio la imagen   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp">

            <TextView
                android:id="@+id/tvMetodoOrden"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:text="Metodo Orden:" />

            <Spinner
                android:id="@+id/orderPriceMethodSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#AAF6DDFF"
                android:paddingHorizontal="5dp"
                android:text="@string/order_price_selection"
                android:textAlignment="center"
                android:layout_marginVertical="5dp"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/order_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/order_cross_description"
                android:scaleType="fitCenter"
                android:src="@drawable/cross"
                app:tint="@android:color/holo_red_dark" />

            <ImageButton
                android:id="@+id/order_accept_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/order_tick_description"
                android:scaleType="fitCenter"
                android:src="@drawable/tick"
                app:tint="@android:color/holo_green_dark" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

