...
    <item
        android:id="@+id/menuItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/info" />
    <item
        android:id="@+id/menuOrderButton"
        android:icon="@drawable/sort_text"
        android:title="@string/order_title"
        app:showAsAction="always"/>
</menu>
