...
        android:id="@+id/interest_point_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- ListView que ocupa todo el espacio restante -->
    <ListView
        android:id="@+id/lvStations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>

